translation system, loading guide